package signalservice;

message ProvisioningUuid {
 optional string uuid = 1;
}


message ProvisionEnvelope {
  optional bytes publicKey = 1;
  optional bytes body      = 2; // Encrypted ProvisionMessage
}

message ProvisionMessage {
  optional bytes   identityKeyPrivate  = 2;
  optional string  number              = 3;
  optional string  uuid                = 8;
  optional string  provisioningCode    = 4;
  optional string  userAgent           = 5;
  optional bytes   profileKey          = 6;
  optional bool    readReceipts        = 7;
  optional uint32  ProvisioningVersion = 9;
}

enum ProvisioningVersion {
  option allow_alias = true;

  INITIAL        = 0;
  TABLET_SUPPORT = 1;
  CURRENT        = 1;
}